# yuniq

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  bench.sh  bench_data.py  test.py
src/: main.rs  tests.rs  unicode.rs
