[package]
name = "yuniq"
version = "0.1.0"
edition = "2024"
description = "yuniq is a blazing-fast utility to remove duplicate lines from input."
license = "MIT"
repository = "https://github.com/wyfo/yuniq"
readme = "README.md"
keywords = ["cli", "uniq", "xxhash", "dedup"]
categories = ["command-line-utilities"]

[dependencies]
bumpalo = "3.20.2"
clap = { version = "4.6.0", features = ["derive"] }
foldhash = "0.1.5"
hashbrown = "0.17.0"
itoa = "1.0.18"
libc = "0.2.184"
memchr = "2.8.0"
memmap2 = "0.9.10"

[profile.release]
panic = "abort"
lto = "fat"
opt-level = 3
codegen-units = 1
strip = true
debug = false

[lints.clippy]
undocumented_unsafe_blocks = "warn"
